--- a/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
+++ b/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
@@ -102,7 +102,8 @@
             <div class="p-col-12 p-grid">
                 <div class="p-md-2">
                     <button pButton type="button" label="Exportar"
-                        pTooltip="Exportar arquivo de consultas."></button>
+                        pTooltip="Exportar arquivo de consultas."
+                        (click)="exportarConsultas()"></button>
                 </div>
             </div>
         </div>
