--- a/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
+++ b/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
@@ -1,9 +1,9 @@
 <div class="p-grid p-fluid" [formGroup]="telefone">
     <div class="p-col-12 p-grid">
-        <div nDropdown required label="Tipo de Telefone" [options]="opcoesDeTipoDeTelefone" formControlName="tipo" (onChange)="tipoTelefone($event)" class="p-md-3 p-sm-6 p-col-12"></div>
-        <div nDropdown required label="DDD" [service]="dddService" optionLabel="valor" (onChange)="atualizarDDD($event)" class="p-md-2 p-sm-4 p-col-8"></div>
-        <div nInputMask required [mask]="tipoMascara" tooltip="Informe o telefone." label="Telefone" formControlName="numero" class="p-md-2 p-sm-4 p-col-8"></div>
-        <div nInputText label="Observação" formControlName="observacao" class="p-md-5 p-sm-10 p-col-12"></div>        
+        <div nDropdown required label="Tipo de Telefone" [options]="opcoesDeTipoDeTelefone" formControlName="tipo" (onChange)="tipoTelefone($event)" class="p-md-3 p-sm-12 p-col-12"></div>
+        <div nDropdown required label="DDD" [service]="dddService" optionLabel="valor" formControlName="ddd" class="p-md-2 p-sm-12 p-col-12"></div>
+        <div nInputMask required [mask]="tipoMascara" tooltip="Informe o telefone." label="Telefone" formControlName="numero" class="p-md-2 p-sm-12 p-col-12"></div>
+        <div nInputText label="Observação" formControlName="observacao" class="p-md-5 p-sm-12 p-col-12"></div>        
     </div>
     <div *ngIf="!telefone.value.indice" class="p-col-2 p-grid">
         <div class="p-md-12 p-sm-12">
