Remover error de javascript e fazer tratamento de erros. - BASIS-206709
Signed-off-by: yukioz <yukio.link@gmail.com>

--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -43,9 +43,9 @@
                     <span
                       class="celulaContent">{{exames.nomeUsual}}{{i}}</span>
                     <span
-                      class="celulaContent">teste</span>
+                      class="celulaContent">{{exames.material}}</span>
                     <span
-                      class="celulaContent">teste</span>
+                      class="celulaContent">{{exames.amostraExameNome}}</span>
                     <span
                       class="celulaContent">{{exames.sigla}}</span>
                     <span
