--- a/frontend/src/app/exames/components/solicitar-exame/solicitar-exame.component.html
+++ b/frontend/src/app/exames/components/solicitar-exame/solicitar-exame.component.html
@@ -1,3 +1,5 @@
+<p-toast position="top-left" key="tl"></p-toast>
+
 <div class="p-grid p-fluid">
 
     <div class="p-col-12 p-grid">
@@ -91,23 +93,28 @@
                     <div style="margin-top: 10px" [formGroup]="solicitarExame">
                         Paciente utiliza antimicrobianos a mais de 24 horas:
                         <div style="margin-top: 5px; margin-bottom: 10px;">
-                            <p-radioButton name="antimicrobianos" value=true [(ngModel)]="opcoesDeAntimicrobianos"
+                            <p-radioButton name="usoAntimicrobianos24h" value=true
                                 label="Sim" formControlName="usoAntimicrobianos24h">
                             </p-radioButton>
 
-                            <p-radioButton name="antimicrobianos" value=false [(ngModel)]="opcoesDeAntimicrobianos"
+                            <p-radioButton name="usoAntimicrobianos24h" value=false
                                 label="Não" formControlName="usoAntimicrobianos24h">
                             </p-radioButton>
                         </div>
 
                         Pedido para 1° exame ou comparativo:
                         <div style="margin-top: 5px; margin-bottom: 10px;" [formGroup]="solicitarExame">
-                            <p-radioButton name="exameOuComparativo" value=true [(ngModel)]="opcoesDeExameOuComparativo"
+                            <p-radioButton name="pedidoPrimeiroExame" value=true
                                 label="1º Exame" formControlName="pedidoPrimeiroExame">
                             </p-radioButton>
 
-                            <p-radioButton name="exameOuComparativo" value=false
-                                [(ngModel)]="opcoesDeExameOuComparativo" label="Comparativo"                                formControlName="pedidoPrimeiroExame"></p-radioButton>
+                            <p-radioButton
+                                name="pedidoPrimeiroExame"
+                                value=false
+                                label="Comparativo"
+                                formControlName="pedidoPrimeiroExame"
+                            >
+                            </p-radioButton>
                         </div>
 
                     </div>
